@startuml
'https://plantuml.com/class-diagram

class YZTabBottom implements YZTab {
   TabBottomInfo tabInfo;
}
note right of YZTabBottom : 底部单个tab

class RelativeLayout {
}
RelativeLayout <|.. YZTabBottom : 继承（泛化关系）

interface YZTabLayout <Tab extends ViewGroup, D> {
    Tab findTab(@NonNull D data)
    void addTabSelectedChangeListener(OnTabSelectedListener<D> listener)
    void defaultSelected(@NonNull D defaultInfo)
    void inflateInfo(@NonNull List<D> infoList)
}
note bottom of YZTabLayout : YZTabBottom 容器的对外接口

class YZTabBottomLayout implements YZTabLayout {
    List<OnTabSelectedChangeListener> tabSelectedChangeListeners;
    TabBottomInfo selectedInfo;
}
note bottom of YZTabBottomLayout : TabBottom容器控件

class FrameLayout {
}

FrameLayout <|.. YZTabBottomLayout : 继承（泛化关系）
YZTabBottom --* YZTabBottomLayout

class YZTabBottomInfo <Color> {
    Class<? extends Fragment> fragment;
    String name;
    Bitmap defaultBitmap;
    Bitmap selectedBitmap;
    String iconFont;
    String defaultIconName;
    String selectedIconName;
    Color defaultColor;
    Color selectedColor;
}
note left of YZTabBottomInfo : 单个Tab的数据模型

YZTabBottom o-- YZTabBottomInfo : YZTabBottomInfo has YZTabBottom

interface YZTab <D> extends OnTabSelectedChangeListener {
    void setTabInfo(@NonNull D data);
    void resetHeight(@Px int height);
}

note bottom of YZTab: 对外接口

interface OnTabSelectedChangeListener <D> {
    void onTabSelectedChange(int index, @Nullable D prevInfo, @Nullable D nextInfo);
}

note bottom of OnTabSelectedChangeListener: Tab被选中的回调

@enduml